--- a/config/envs/rhpam-production-immutable.yaml
+++ b/config/envs/rhpam-production-immutable.yaml
@@ -11,9 +11,9 @@ servers:
       - metadata:
           name: "{{$.ApplicationName}}-postgresql-claim-{{$index}}"
           labels:
-            app: "{{$.ApplicationName}}"
+            app: "{{$.ApplicationName}}-postgresql"
             application: "{{$.ApplicationName}}"
-            service: "{{$.ApplicationName}}-postgresql-{{$index}}"
+            service: "{{$.Product}}-posgtresql"
         spec:
           accessModes:
             - ReadWriteOnce
@@ -27,16 +27,16 @@ servers:
       - metadata:
           name: "{{$.ApplicationName}}-kieserver-{{$index}}"
           labels:
-            app: "{{$.ApplicationName}}"
+            app: "{{$.ApplicationName}}-kieserver"
             application: "{{$.ApplicationName}}"
-            service: "{{$.ApplicationName}}-kieserver-{{$index}}"
+            service: "{{$.Product}}-kieserver"
     buildConfigs:
       - metadata:
           name: "{{$.ApplicationName}}-kieserver-{{$index}}"
           labels:
-            app: "{{$.ApplicationName}}"
+            app: "{{$.ApplicationName}}-kieserver-{{$index}}"
             application: "{{$.ApplicationName}}"
-            service: "{{$.ApplicationName}}-kieserver-{{$index}}"
+            service: "{{$.Product}}-kieserver"
         spec:
           source:
             type: Git
@@ -80,9 +80,9 @@ servers:
       - metadata:
           name: "{{$.ApplicationName}}-kieserver-{{$index}}"
           labels:
-            app: "{{$.ApplicationName}}"
+            app: "{{$.ApplicationName}}-kieserver"
             application: "{{$.ApplicationName}}"
-            service: "{{$.ApplicationName}}-kieserver-{{$index}}"
+            service: "{{$.Product}}-kieserver"
         spec:
           replicas: 2
           template:
@@ -140,9 +140,9 @@ servers:
       - metadata:
           name: "{{$.ApplicationName}}-postgresql-{{$index}}"
           labels:
-            app: "{{$.ApplicationName}}"
+            app: "{{$.ApplicationName}}-postgresql-{{$index}}"
             application: "{{$.ApplicationName}}"
-            service: "{{$.ApplicationName}}-postgresql-{{$index}}"
+            service: "{{$.Product}}-posgtresql"
         spec:
           strategy:
             type: Recreate
@@ -165,9 +165,9 @@ servers:
               name: "{{$.ApplicationName}}-postgresql-{{$index}}"
               labels:
                 deploymentConfig: "{{$.ApplicationName}}-postgresql-{{$index}}"
-                app: "{{$.ApplicationName}}"
+                app: "{{$.ApplicationName}}-postgresql-{{$index}}"
                 application: "{{$.ApplicationName}}"
-                service: "{{$.ApplicationName}}-postgresql-{{$index}}"
+                service: "{{$.Product}}-posgtresql"
             spec:
               containers:
                 - name: "{{$.ApplicationName}}-postgresql"
@@ -213,7 +213,7 @@ servers:
             description: The database server's port.
           labels:
             application: prod
-            service: "{{$.ApplicationName}}-postgresql-{{$index}}"
+            service: "{{$.Product}}-posgtresql"
           name: "{{$.ApplicationName}}-postgresql-{{$index}}"
         spec:
           ports:
