--- a/config/envs/rhdm-optaweb-trial.yaml
+++ b/config/envs/rhdm-optaweb-trial.yaml
@@ -13,9 +13,9 @@ others:
       - metadata:
           name: "{{.ApplicationName}}-optaweb-employee-rostering"
           labels:
-            app: "{{.ApplicationName}}"
+            app: "{{.ApplicationName}}-optaweb-employee-rostering"
             application: "{{.ApplicationName}}"
-            service: "{{.ApplicationName}}-optaweb-employee-rostering"
+            service: "{{.Product}}-optaweb-employee-rostering"
         spec:
           strategy:
             type: Recreate
@@ -38,9 +38,9 @@ others:
               name: "{{.ApplicationName}}-optaweb-employee-rostering"
               labels:
                 deploymentConfig: "{{.ApplicationName}}-optaweb-employee-rostering"
-                app: "{{.ApplicationName}}"
+                app: "{{.ApplicationName}}-optaweb-employee-rostering"
                 application: "{{.ApplicationName}}"
-                service: "{{.ApplicationName}}-optaweb-employee-rostering"
+                service: "{{.Product}}-optaweb-employee-rostering"
             spec:
               serviceAccountName: "{{.ApplicationName}}-{{.Product}}svc"
               terminationGracePeriodSeconds: 60
@@ -99,9 +99,9 @@ others:
         metadata:
           name: "{{.ApplicationName}}-optaweb-employee-rostering"
           labels:
-            app: "{{.ApplicationName}}"
+            app: "{{.ApplicationName}}-optaweb-employee-rostering"
             application: "{{.ApplicationName}}"
-            service: "{{.ApplicationName}}-optaweb-employee-rostering"
+            service: "{{.Product}}-optaweb-employee-rostering"
           annotations:
             description: All the Optaweb's ports. (KIE server)
     routes:
@@ -109,9 +109,9 @@ others:
         metadata:
           name: "{{.ApplicationName}}-optaweb-employee-rostering"
           labels:
-            app: "{{.ApplicationName}}"
+            app: "{{.ApplicationName}}-optaweb-employee-rostering"
             application: "{{.ApplicationName}}"
-            service: "{{.ApplicationName}}-optaweb-employee-rostering"
+            service: "{{.Product}}-optaweb-employee-rostering"
           annotations:
             description: Route for Optaweb's https service.
             haproxy.router.openshift.io/timeout: 60s
@@ -124,9 +124,9 @@ others:
         metadata:
           name: "{{.ApplicationName}}-optaweb-employee-rostering-http"
           labels:
-            app: "{{.ApplicationName}}"
+            app: "{{.ApplicationName}}-optaweb-employee-rostering"
             application: "{{.ApplicationName}}"
-            service: "{{.ApplicationName}}-optaweb-employee-rostering"
+            service: "{{.Product}}-optaweb-employee-rostering"
           annotations:
             description: Route for Optaweb's http service.
             haproxy.router.openshift.io/timeout: 60s
