--- a/deploy/examples/common_config.yaml
+++ b/deploy/examples/common_config.yaml
@@ -8,5 +8,5 @@ spec:
     # By default is the cr.Name
     applicationName: other
     adminPassword: example
-    imageTag: "1.0-stage"
-    mavenRepo: https://maven.example.com
+    imageTag: 1.0-stage
+    mavenRepo: INTERNAL
