--- a/image.yaml
+++ b/image.yaml
@@ -1,6 +1,6 @@
 schema_version: 1
 
-name: "rhpam-7/rhpam"
+name: "rhpam-7/rhpam-rhel8-operator"
 description: "Red Hat Business Automation Operator"
 version: "7.5.1"
 from: "ubi8:8-released"
